--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "nodejs"
   ],
   "engines": {
-    "node": ">8"
+    "node": ">=8"
   },
   "author": "oreofeoluwapo.olutola <oreofeoluwapo.olutola@andela.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
     "cors": "^2.8.4",
@@ -35,6 +36,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.39.0",
     "sequelize-cli": "^4.1.1",
+    "uuid": "^3.3.2",
     "winston": "^3.1.0"
   },
   "devDependencies": {
